--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
         <div class="portfolio-grid">
             <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/63QRjm2D/8ed658b11e0984fe96656b917b69e72f.jpg')"><img src="https://i.postimg.cc/63QRjm2D/8ed658b11e0984fe96656b917b69e72f.jpg" alt="1"></div>
             <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/wB4QDm0W/5c138ef3f09d38a79084ec4732ce3bae.jpg')"><img src="https://i.postimg.cc/wB4QDm0W/5c138ef3f09d38a79084ec4732ce3bae.jpg" alt="2"></div>
-            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/MpKBtGMz/73eb86ca760e730640f3ac1d77b8f060.jpg')"><img src="https://i.postimg.cc/MpKBtGMz/73eb86ca760e730640f3ac1d77b8f060.jpg" alt="3"></div>
-            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/Pxkr363n/972fd580961323745dcd17b6cb176380.jpg')"><img src="https://i.postimg.cc/Pxkr363n/972fd580961323745dcd17b6cb176380.jpg" alt="4"></div>
+            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/43BdDsjv/ecb6f45ce3164795b3c5da77c624dbfb.jpg')"><img src="https://i.postimg.cc/43BdDsjv/ecb6f45ce3164795b3c5da77c624dbfb.jpg" alt="3"></div> 
+            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/8576w7sy/d87e6bfa2c6b3a3b1019a146bc79ad46.jpg')"><img src="https://i.postimg.cc/8576w7sy/d87e6bfa2c6b3a3b1019a146bc79ad46.jpg" alt="4"></div>
             <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/zBj5dqH0/36349ede53de3e001c04d57effcf544c.jpg')"><img src="https://i.postimg.cc/zBj5dqH0/36349ede53de3e001c04d57effcf544c.jpg" alt="5"></div>
-            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/m2cf9YjX/57f76d75c90a180ded483ce2024b60ce.jpg')"><img src="https://i.postimg.cc/m2cf9YjX/57f76d75c90a180ded483ce2024b60ce.jpg" alt="6"></div>
+            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/yNkxCwBk/7f4663ddac63d68518f1e9a472f8c27c.jpg')"><img src="https://i.postimg.cc/yNkxCwBk/7f4663ddac63d68518f1e9a472f8c27c.jpg" alt="6"></div>
             <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/NGzZQytH/412fd62620ecc4f1128a77b6223ee52f.jpg')"><img src="https://i.postimg.cc/NGzZQytH/412fd62620ecc4f1128a77b6223ee52f.jpg" alt="7"></div>
-            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/qqPmy3MB/80c427c4411ee8c54bba5d3b62fe7cc4.jpg')"><img src="https://i.postimg.cc/qqPmy3MB/80c427c4411ee8c54bba5d3b62fe7cc4.jpg" alt="8"></div>
+            <div class="portfolio-item" onclick="openLightbox('https://i.postimg.cc/HLqYDnBy/cf1758f7d43352810973a5cde609c324.jpg')"><img src="https://i.postimg.cc/HLqYDnBy/cf1758f7d43352810973a5cde609c324.jpg" alt="8"></div>
         </div>
         <div style="text-align: center;">
             <a href="https://pin.it/40qmswEUG" target="_blank" class="btn" data-i18n="btn_more_works">See More on Pinterest</a>
@@ -427,26 +427,26 @@
                 btn_start_project: "Start a Project"
             },
             ar: {
-                nav_home: "الرئيسية", nav_portfolio: "أعمالي", nav_about: "من أنا", nav_contact: "تواصل معي",
-                available_status: "متاح للعمل",
-                loc_text: "المنصورة، مصر",
-                greeting_hi: "أهلاً، أنا شاكر محمد",
-                role_text: "تصميمات السوشيال ميديا والصور المصغرة",
-                home_description: "مصمم جرافيك محترف متخصص في بناء هويات بصرية قوية تخطف الأنظار وتساعد محتواك على التميز.",
-                title_portfolio: "معرض <span>أعمالي</span>",
-                btn_more_works: "شاهد المزيد على بينتريست",
-                title_about: "من <span>أنا</span>",
-                about_desc: "أنا مصمم جرافيك شغوف بخبرة تزيد عن سنتين. متخصص في تحويل الأفكار المعقدة إلى تصميمات نظيفة، احترافية وجذابة بصرياً. سواء كنت تحتاج صورة مصغرة لليوتيوب أو إعلان سوشيال ميديا، أنا هنا لمساعدتك.",
-                exp_title_1: "مصمم جرافيك حر",
-                exp_date_1: "2022 - حتى الآن",
-                exp_desc_1: "العمل مع عملاء محليين ودوليين لتقديم حلول جرافيك عالية الجودة.",
-                skill_social: "تصميم السوشيال ميديا",
-                skill_social_desc: "خبير في إنشاء محتوى مرئي متناسق وجذاب لجميع منصات التواصل الاجتماعي.",
-                skill_thumb: "الصور المصغرة (Thumbnails)",
-                skill_thumb_desc: "تصميم صور مصغرة تزيد نسبة النقر (CTR) وتجذب المشاهدين للتوقف والضغط على الفيديو.",
-                title_contact: "ابق على <span>تواصل</span>",
-                btn_contact: "تواصل معي",
-                btn_start_project: "ابدأ مشروعاً"
+                nav_home: "ﺔﻴﺴﻴﺋﺮﻟﺍ", nav_portfolio: "ﻲﻟﺎﻤﻋﺃ", nav_about: "ﺎﻧﺃ ﻦﻣ", nav_contact: "ﻲﻌﻣ ﻞﺻﺍﻮﺗ",
+                available_status: "ﻞﻤﻌﻠﻟ ﺡﺎﺘﻣ",
+                loc_text: "ﺮﺼﻣ ،ﺓﺭﻮﺼﻨﻤﻟﺍ",
+                greeting_hi: "ﺪﻤﺤﻣ ﺮﻛﺎﺷ ﺎﻧﺃ ،ﻼﻫﺃ",
+                role_text: "ﺓﺮﻐﺼﻤﻟﺍ ﺭﻮﺼﻟﺍﻭ ﺎﻳﺪﻴﻣ ﻝﺎﻴﺷﻮﺴﻟﺍ ﺕﺎﻤﻴﻤﺼﺗ",
+                home_description: "ﺰﻴﻤﺘﻟﺍ ﻰﻠﻋ ﻙﺍﻮﺘﺤﻣ ﺪﻋﺎﺴﺗﻭ ﺭﺎﻈﻧﻷﺍ ﻒﻄﺨﺗ ﺔﻳﻮﻗ ﺔﻳﺮﺼﺑ ﺕﺎﻳﻮﻫ ﺀﺎﻨﺑ ﻲﻓ ﺺﺼﺨﺘﻣ ﻑﺮﺘﺤﻣ ﻚﻴﻓﺍﺮﺟ ﻢﻤﺼﻣ.",
+                title_portfolio: "ﺽﺮﻌﻣ <span>ﻲﻟﺎﻤﻋﺃ</span>",
+                btn_more_works: "ﺖﺴﻳﺮﺘﻨﻴﺑ ﻰﻠﻋ ﺪﻳﺰﻤﻟﺍ ﺪﻫﺎﺷ",
+                title_about: "ﻦﻣ <span>ﺎﻧﺃ</span>",
+                about_desc: "ﻚﺗﺪﻋﺎﺴﻤﻟ ﺎﻨﻫ ﺎﻧﺃ ،ﺎﻳﺪﻴﻣ ﻝﺎﻴﺷﻮﺳ ﻥﻼﻋﺇ ﻭﺃ ﺏﻮﻴﺗﻮﻴﻠﻟ ﺓﺮﻐﺼﻣ ﺓﺭﻮﺻ ﺝﺎﺘﺤﺗ ﺖﻨﻛ ﺀﺍﻮﺳ .ﺎﻳﺮﺼﺑ ﺔﺑﺍﺬﺟﻭ ﺔﻴﻓﺍﺮﺘﺣﺍ ،ﺔﻔﻴﻈﻧ ﺕﺎﻤﻴﻤﺼﺗ ﻰﻟﺇ ﺓﺪﻘﻌﻤﻟﺍ ﺭﺎﻜﻓﻷﺍ ﻞﻳﻮﺤﺗ ﻲﻓ ﺺﺼﺨﺘﻣ .ﻦﻴﺘﻨﺳ ﻦﻋ ﺪﻳﺰﺗ ﺓﺮﺒﺨﺑ ﻑﻮﻐﺷ ﻚﻴﻓﺍﺮﺟ ﻢﻤﺼﻣ ﺎﻧﺃ.",
+                exp_title_1: "ﺮﺣ ﻚﻴﻓﺍﺮﺟ ﻢﻤﺼﻣ",
+                exp_date_1: "2022 - ﻥﻵﺍ ﻰﺘﺣ",
+                exp_desc_1: "ﺓﺩﻮﺠﻟﺍ ﺔﻴﻟﺎﻋ ﻚﻴﻓﺍﺮﺟ ﻝﻮﻠﺣ ﻢﻳﺪﻘﺘﻟ ﻦﻴﻴﻟﻭﺩﻭ ﻦﻴﻴﻠﺤﻣ ﺀﻼﻤﻋ ﻊﻣ ﻞﻤﻌﻟﺍ.",
+                skill_social: "ﺎﻳﺪﻴﻣ ﻝﺎﻴﺷﻮﺴﻟﺍ ﻢﻴﻤﺼﺗ",
+                skill_social_desc: "ﻲﻋﺎﻤﺘﺟﻻﺍ ﻞﺻﺍﻮﺘﻟﺍ ﺕﺎﺼﻨﻣ ﻊﻴﻤﺠﻟ ﺏﺍﺬﺟﻭ ﻖﺳﺎﻨﺘﻣ ﻲﺋﺮﻣ ﻯﻮﺘﺤﻣ ﺀﺎﺸﻧﺇ ﻲﻓ ﺮﻴﺒﺧ.",
+                skill_thumb: "ﺓﺮﻐﺼﻤﻟﺍ ﺭﻮﺼﻟﺍ (Thumbnails)",
+                skill_thumb_desc: "ﺮﻘﻨﻟﺍ ﺔﺒﺴﻧ ﺪﻳﺰﺗ ﺓﺮﻐﺼﻣ ﺭﻮﺻ ﻢﻴﻤﺼﺗ (CTR) ﻮﻳﺪﻴﻔﻟﺍ ﻰﻠﻋ ﻂﻐﻀﻟﺍﻭ ﻒﻗﻮﺘﻠﻟ ﻦﻳﺪﻫﺎﺸﻤﻟﺍ ﺏﺬﺠﺗﻭ.",
+                title_contact: "ﻰﻠﻋ ﻖﺑﺍ <span>ﻞﺻﺍﻮﺗ</span>",
+                btn_contact: "ﻲﻌﻣ ﻞﺻﺍﻮﺗ",
+                btn_start_project: "ﺎﻋﻭﺮﺸﻣ ﺃﺪﺑﺍ"
             }
         };
 
